--- a/css/estilos.css
+++ b/css/estilos.css
@@ -54,3 +54,21 @@ h3{
 	color: white;
 	background-color: blue;
 }
+.ÑU{
+	color:blue; 
+	background-color: black;
+	font-size: 60px;
+}
+.i{
+	color: white;
+	background-color: black;
+}
+.gn{
+	color: red;
+	font-size: 60px;
+}
+.programs{
+	color: green;
+    font-size: 40px;
+	text-align: center;
+}
